--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     CONCEPT
                 </h2>
                 <p class="num">
-                    <img src="img/concept_ttl_num.png">
+                    <img src="concept_ttl_num.png">
                 </p>
                 <div class="inner">
                     <div class="concept-carousel swiper-container">
@@ -197,7 +197,7 @@
             <!--Salon--------------------------------------------------------------------------->
             <article id="Salon">
                 <h2>HAIR SALON</h2>
-                <p class="num"><img src="img/cafe_ttl_num.png"></p>
+                <p class="num"><img src="cafe_ttl_num.png"></p>
                 <div class="inner">
                     <div class="salon-carousel swiper-container">
                         <div class="swiper-wrapper">
@@ -288,7 +288,7 @@
                     CAFE
                 </h2>
                 <p class="num">
-                    <img src="img/salon_ttl_num.png">
+                    <img src="salon_ttl_num.png">
                 </p>
                 <div class="inner">
                     <div class="cafe-carousel swiper-container">
@@ -660,7 +660,7 @@
                 <div class="inner">
                     <h2>NEWS</h2>
                     <p class="num">
-                        <img src="img/news_ttl_num.png">
+                        <img src="news_ttl_num.png">
                     </p>
                     <!--posts--------------------------------------------------------------------------------------->
                     <div class="news-area" id="news-area">
@@ -769,12 +769,12 @@
         <footer id="Footer">
             <p class="bottom-logo">
                 <a href="#Container">
-                    <img src="img/logo_bottom.png">
+                    <img src="logo_bottom.png">
                 </a>
             </p>
             <p class="logo">
                 <a href="#Container">
-                    <img src="img/footer_logo.png">
+                    <img src="footer_logo.png">
                 </a>
             </p>
             <ul class="social">
