--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
 
 <link rel="index" href="/">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700|Oswald" type="text/css">
-<link rel="stylesheet" href="https://kubota13.github.io/github.io-signsplus/common.min.css">
-<link rel="stylesheet" href="https://kubota13.github.io/github.io-signsplus/index.min.css">
-<link rel="stylesheet" href="https://kubota13.github.io/github.io-signsplus/slick.css">
-<link rel="stylesheet" href="https://kubota13.github.io/github.io-signsplus/slick-theme.css">
+<link rel="stylesheet" href="https://kubota13.github.io/signsplus/common.min.css">
+<link rel="stylesheet" href="https://kubota13.github.io/signsplus/index.min.css">
+<link rel="stylesheet" href="https://kubota13.github.io/signsplus/slick.css">
+<link rel="stylesheet" href="https://kubota13.github.io/signsplus/slick-theme.css">
 
-<script src="https://kubota13.github.io/github.io-signsplus/library.min.js"></script>
+<script src="https://kubota13.github.io/signsplus/library.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCoqKg0Di1JsKvJvl14qLNrCTyNm3Kuyo"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.velocity.js"></script>
-<script src="https://kubota13.github.io/github.io-signsplus/index.min.js"></script>
-<script src="https://kubota13.github.io/github.io-signsplus/jquery-3.6.1.min.js"></script>
-<script src="https://kubota13.github.io/github.io-signsplus/slick.min.js"></script>
+<script src="https://kubota13.github.io/signsplus/index.min.js"></script>
+<script src="https://kubota13.github.io/signsplus/jquery-3.6.1.min.js"></script>
+<script src="https://kubota13.github.io/signsplus/slick.min.js"></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -828,6 +828,6 @@
             })
         });(jQuery)
     </script>
-    <script src="https://kubota13.github.io/github.io-signsplus/main.min.js"></script>
+    <script src="https://kubota13.github.io/signsplus/main.min.js"></script>
 </body>
 </html>
