--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
 <link rel="index" href="/">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700|Oswald" type="text/css">
-<link rel="stylesheet" href="https://kubota13.github.io/signsplus/common.min.css">
+<link rel="stylesheet" href="https://signsplus/common.min.css">
 <link rel="stylesheet" href="https://kubota13.github.io/signsplus/index.min.css">
 <link rel="stylesheet" href="https://kubota13.github.io/signsplus/slick.css">
 <link rel="stylesheet" href="https://kubota13.github.io/signsplus/slick-theme.css">
 
-<script src="https://kubota13.github.io/signsplus/library.min.js"></script>
+<script src="https://signsplus/library.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCoqKg0Di1JsKvJvl14qLNrCTyNm3Kuyo"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
