--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <link rel="index" href="/">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700|Oswald" type="text/css">
-<link rel="stylesheet" href="https://signsplus/common.min.css">
+<link rel="stylesheet" href="https://kubota13.github.io/signsplus/common.min.css">
 <link rel="stylesheet" href="https://signsplus/index.min.css">
 <link rel="stylesheet" href="https://signsplus/slick.css">
 <link rel="stylesheet" href="https://signsplus/slick-theme.css">
