--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!--MV------------------------------------------------------------------------------------>
         <div class="mv">
             <h1 class="mv-title" style="opacity: 1;">
-                <img src="img/mv_logo.png">
+                <img src="mv_logo.png">
             </h1>
             <div id="MV" style=" height: 939px;">
                 <p class="scroll">
