--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
             <article id="Access">
                 <h2>SHOP INFORMATION</h2>
                 <p class="num">
-                    <img src="img/access_ttl_num.png">
+                    <img src="access_ttl_num.png">
                 </p>
                 <div id="MAP">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25421.12289930532!2d141.00190500000002!3d37.208770699999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60211f41c77e8fc3%3A0x5005c5e799227bf7!2z44Kk44Kq44Oz5bqD6YeO5bqX!5e0!3m2!1sja!2sjp!4v1666878806959!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
